--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="interestBx">
                 <img src="./coding.png">
                 <h2>Competitive Programming</h2>
-                <p>I like to code in programming languages like pyhton and c++, and take part in online coding contest
+                <p>I like to code in programming languages like C++ and Python, and take part in online coding contest
                     platfroms like Codechef to enhance my coding skills further.</p>
             </div>
             <div class="interestBx">
