--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <p>An innovator, hard worker and a quick learner looking for career opportunities to utilise my
                     technical and management skills alongside my initiative, dependability and adaptability to further
                     help the complany's production in achieving it's set goals.</p>
-                <a href="./Harshit resume1.pdf" class="btn" download="Harshit">Download CV</a>
+                <a href="./CSEAIML_2101921530070_Harshit Singh" class="btn" download="Harshit">Download CV</a>
             </div>
             <div class="w50">
                 <img src="./dpdress.jpg" class="img">
